# open-haskell

./: .gitignore  2013-01-17-ann.markdown  Makefile  README.md  Shake.hs  hshw.sty  index.html  notes.org  open-cis194.cabal  open-haskell.cabal  site.hs  stack.yaml
01/: 01-intro.lec.lhs
_site/weeks/: 1-intro-to-haskell.html
app/: devel.hs
config/: keter.yml
css/: default.css
docs/: inthelarge.lhs
lectures/: adts.md  applicative.md  applicativeTwo.md  folds.md  functors.md  higher-order.md  intro.md  io.md  laziness.md  monads.md  rec-poly.md  typeclasses.md
literate/: adts.lhs  intro.lhs
scripts/: convert.sh
templates/: archive.html  default.html  post-list.html
tools/: Makefile  Supply.hs  lec-watch  processLec.hs
web/: Makefile  final.markdown  final.md  hakyll.hs  header.markdown  index.markdown  index.md  lectures.markdown  open-cis194.cabal  resources.markdown
web/submission/: hwsubmission.html
web/templates/: default.html  lecture.markdown
weeks/: hshw.sty  intro.md
weeks/01-intro/: 01-intro.hw.lhs  01-intro.lec.lhs  01-intro.markdown  Hanoi.hs
weeks/02-ADTs/: 02-ADTs.hw.lhs  02-ADTs.lec.lhs  02-ADTs.markdown
weeks/03-rec-poly/: 03-rec-poly.hw.lhs  03-rec-poly.lec.lhs  03-rec-poly.slides.lhs
weeks/04-higher-order/: 04-higher-order.hw.lhs  04-higher-order.lec.lhs
weeks/05-type-classes/: 05-type-classes.hw.lhs  05-type-classes.lec.lhs  05-type-classes.markdown
weeks/06-laziness/: 06-laziness.hw.lhs  06-laziness.lec.lhs
weeks/07-folds-monoids/: 07-folds-monoids.hw.lhs  07-folds-monoids.lec.lhs  07-folds-monoids.markdown
(+48 files in other folders)
