name:               open-cis194
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

executable site
  main-is:          site.hs
  build-depends:    base == 4.*
                  , containers
                  , hakyll == 4.7.*
                  , pandoc
  ghc-options:      -threaded
  default-language: Haskell2010
