name:                open-cis194
version:             0.1.0.0
synopsis:            open-cis194 website
homepage:            http://open-cis194.com
license:             MIT
license-file:        LICENSE
author:              Chris Allen
maintainer:          cma@bitemyapp.com
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable open-cis194
  main-is: hakyll.hs
  build-depends:       base >=4.6 && <4.8,
                       filepath,
                       hakyll,
                       old-locale,
                       resourcet==1.1.0.1,
                       safe,
                       time
  default-language:    Haskell2010
